# the_first_programmers_book

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE_BOOK.txt  README.md  pyproject.toml
04/: the_first_program.py
chapters/04/: 4_the_first_program.py
chapters/04/en/: 4_code_samples.py  4_the_first_program.py  README.md
chapters/04/ua/: 4_code_samples.py  4_the_first_program.py  README.md
chapters/05/en/: README.md
chapters/05/ua/: README.md
chapters/06/en/: 6_code_samples.py  README.md
chapters/06/ua/: 6_code_samples.py  README.md
chapters/07/en/: 7_code_samples.py  README.md
chapters/07/ua/: 7_code_samples.py  README.md
chapters/08/en/: 8_code_samples.py  README.md
chapters/08/ua/: 8_code_samples.py  README.md
chapters/09/en/: 9_code_samples.py  9_the_magic_8_ball_program.py  README.md
chapters/09/ua/: 9_code_samples.py  9_the_magic_8_ball_program.py  README.md
chapters/10/en/: 10_code_samples.py  README.md
chapters/10/ua/: 10_code_samples.py  README.md
chapters/11/en/: 11_code_samples.py  11_deposit_profit_program.py  README.md
chapters/11/ua/: 11_code_samples.py  11_deposit_profit_program.py  README.md
chapters/12/en/: 12_code_samples.py  README.md
chapters/12/ua/: 12_code_samples.py  README.md
chapters/13/en/: 13_a_f_grading_program.py  13_code_samples.py  13_comparison_operators_program.py  README.md
chapters/13/ua/: 13_a_f_grading_program.py  13_code_samples.py  13_comparison_operators_program.py  README.md
chapters/14/en/: 14_code_samples.py  14_deposit_profit_program.py  README.md
(+65 files in other folders)
